# bresse

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml  ruff.toml
src/bresse/: __init__.py  _chess.py  chess_.py  input.py  output.py  preprocess.py  process.py  result.py  utils.py
src/bresse/identifiers/: base.py  openai.py
src/bresse/models/: __init__.py  __openai.py  base.py  huggingface.py  openai.py
tests/: conftest.py
tests/acceptations/: test_import.py
tests/data/: README.md
tests/data/error/: annotated.pgn  raw.pgn
tests/data/lichess/explorer/: annotated.pgn
tests/data/lichess/study/: annotated.pgn  raw.pgn
tests/data/valid/: raw.pgn
tests/integrations/: test_models.py
tests/integrations/models/: test_base.py  test_model.py
tests/units/: test_chess.py  test_models.py  test_output.py  test_utils.py
