[tool.poetry]
name = "bresse"
version = "0.1.0"
description = ""
authors = ["Athroniaeth <pierre.chaumont@hotmail.fr>"]
readme = "README.md"
repository = "https://github.com/Athroniaeth/bresse"
license = "MIT"
packages = [
    { include = "bresse", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12"
chess = "^1.10.0"
openai = "^1.44.0"
python-dotenv = "^1.0.1"
huggingface-hub = "^0.24.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
mkdocs = "^1.6.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
markers = [
    "costly: tests using LLM inference for real-world testing, so these are expensive tests using API keys in the .env file.",
]
addopts = "-m 'not costly' --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "@abstractmethod",
]